# Frankfurtian-TENS-Thought-Experiment

./: .gitignore  README.md  package-lock.json  setup.sh  start.sh
TENS_Controller/: TENS_Controller.ino
backend/: app.py  pyproject.toml
backend/src/: ArduinoControllerClass.py  dependencies.py  intervention.py  routes.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  IntroTextSequenceComponent.tsx  TwoButtonsExperimentComponent.tsx  index.css
