[tool.poetry]
name = "frankfurtian-tens-thought-experiment"
version = "0.1.0"
description = ""
authors = ["Owen McAllister <owencmcallister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
fastapi = "^0.123.5"
uvicorn = "^0.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
